##########################################################################
# If not stated otherwise in this file or this component's Licenses.txt
# file the following copyright and licenses apply:
#
# Copyright 2017 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##########################################################################
#

scriptsdir = $(wwwdir)/scripts
stylesdir = $(wwwdir)/styles
resourcesdir = $(wwwdir)/resources
cgidir = $(wwwdir)/cgi-bin

dist_www_DATA = www/index.html

dist_scripts_DATA = www/scripts/ds-main.js \
                    www/scripts/ds-comm.js \
                    www/scripts/ds-buttongrid.js \
                    www/scripts/ds-buttonmarker.js \
                    www/scripts/ds-progressbar.js \
                    www/scripts/ds-systemdata.js \
                    www/scripts/ds-errcodes.js \
                    www/scripts/ds-scrolltext.js

dist_styles_DATA = www/styles/ds.css

dist_resources_DATA = www/resources/icon-fail.png \
                      www/resources/icon-success.png \
                      www/resources/icon-warning.png \
                      www/resources/icon-fail-18.png \
                      www/resources/icon-success-18.png \
                      www/resources/icon-warning-18.png

dist_cgi_DATA = www/cgi-bin/agentkill.sh \
                www/cgi-bin/log.sh
